[package]
name = "firestarter"
version = "0.3.2"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "A process and shared socket manager"
keywords = ["socket", "process-manager", "systemd", "socketactivation"]
homepage = "https://github.com/mopemope/firestarter"
repository = "https://github.com/mopemope/firestarter"
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["demo"]
edition = "2018"

[dependencies]
clap = "2.32"
failure = "0.1.5"
failure_derive = "0.1"
backtrace-sys = "0.1.28" # Not used directly, but needed by failure and needed to set minimum versions
regex = "1.1"
lazy_static = "1.2"
log = "0.4"
env_logger = "0.6"
console = "0.8"
libc = "0.2"
toml = "0.4.10"
mio = "0.6.14"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0"
nix = "0.13"
chrono = "0.4.2"
glob = "0.2.10"
nom = "4.1"
