[package]
name = "firestarter"
version = "0.3.3"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = "A process and shared socket manager"
keywords = ["socket", "process-manager", "systemd", "socketactivation"]
homepage = "https://github.com/mopemope/firestarter"
repository = "https://github.com/mopemope/firestarter"
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["demo"]
edition = "2018"

[dependencies]
clap = "2.3"
anyhow = "1.0.19"
regex = "1.2"
lazy_static = "1.2"
log = "0.4"
env_logger = "0.7"
console = "0.9"
libc = "0.2"
toml = "0.5.3"
mio = "0.6.14"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0"
nix = "0.20"
chrono = "0.4.2"
glob = "0.3"
nom = "4.2"
